objects/tffa__ProductTerm__c.object
<CustomObject>
    <description>Configuration to maintain rate and purpose for allowed amount ranges and term ranges where applicable. This can also be used to validate the amount and term.</description>
    <fields>
        <fullName>CZDefaultTerm__c</fullName>
        <description>Default Term of the CD</description>
        <label>Default Term of the CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZFounderInterestPlan__c</fullName>
        <description>Interest Plan Code for Founders.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Plan Code for Founders</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZFounderInterestRate__c</fullName>
        <description>Interest Rate</description>
        <label>Founder Interest Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZIsTermBranchOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Term Branch Only.</description>
        <label>Only for Branch Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZMaxTermDays__c</fullName>
        <description>Maximum Term in Days</description>
        <label>Maximum Term in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZMinTermDays__c</fullName>
        <description>Minimum Term in Days</description>
        <label>Minimum Term in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZPenalityInterestMonths__c</fullName>
        <description>Loss of Interest Penality in months</description>
        <label>Loss of Interest Penality in months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__APR__c</fullName>
        <description>The annual percentage rate (APR) is the annual rate charged for borrowing or earned through an investment. APR is expressed as a percentage that represents the actual yearly cost of funds over the term of a loan.</description>
        <label>APR</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__APY__c</fullName>
        <description>The annual percentage yield (APY) is the real rate of return earned on a savings deposit or investment taking into account the effect of compounding interest.</description>
        <label>APY</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <defaultValue>&quot;PT-0001&quot;</defaultValue>
        <description>A logical identifier for the term. Could be a combination of term and amount information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the product tier. Can be used to provide a specific name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InterestPlanCode__c</fullName>
        <description>The unique identifier of the related interest plan in the source system. The interest plan controls the interest rates on the term.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest plan code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>A display name for the term.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaxAmount__c</fullName>
        <description>Upper bound on allowed amount.</description>
        <label>Max Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaxTerm__c</fullName>
        <description>Upper bound on allowed term.</description>
        <label>Max Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MinAmount__c</fullName>
        <description>Lower bound on allowed amount.</description>
        <label>Min Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MinTerm__c</fullName>
        <description>Lower bound on allowed term.</description>
        <label>Min Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <description>Reference to parent product</description>
        <label>Financial Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <description>Need fulfilled by the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Rate__c</fullName>
        <description>Interest rate for current amount and term slab</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of term among terms in the same product.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TermUnit__c</fullName>
        <description>The unit in which the term and other relevant periods are captured. e.g. year, month, etc</description>
        <label>Term unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductTermUnit</valueSetName>
        </valueSet>
    </fields>
    <label>Financial Product Term</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Product Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>